--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,12 @@ body {
     margin: 15px;
 }
 
+.line__footer {
+    border: 1px solid var(--Text-color);
+    margin: 15px;
+    width: 80%;
+}
+
 .title__custom {
     color: var(--Title-color);
     font-family: var(--Title-font);
@@ -153,3 +159,105 @@ body {
 .section__actu__img img{
     width: 100px;
 }
+
+/* SECTION HOURLY */
+.section__hourly{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.section__hourly h3{
+    font-size: 1.3em;
+    text-decoration: underline;
+    font-family: var(--Para-font);
+    color: var(--Text-color);
+}
+
+.section__hourly p{
+    font-family: var(--Para-font);
+    color: var(--Text-color);
+    font-size: 1.2em;
+}
+
+/* SECTION MAP */
+.section__map{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.section__map p{
+    font-family: var(--Para-font);
+    color: var(--Text-color);
+    font-size: 1.2em;
+    padding: 0;
+    margin: 0;
+}
+
+.section__map iframe{
+    margin-top: 15px;
+    width: 100%;
+    height: 100%;
+}
+
+/* FOOTER */
+.footer {
+    background-color: var(--Title-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px 20px 0 0;
+}
+
+.footer__logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.footer__logo__toogood, 
+.footer__logo__trip {
+    width: 10%;
+    max-width: 60px;
+}
+
+.footer__logo__popotte {
+    width: 15%;
+}
+
+.footer__info,
+.footer__nav,
+.footer__contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer__info h4{
+    font-family: var(--Para-font);
+    color: var(--Text-color);
+    font-size: 1em;
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.footer__info p, 
+.footer__nav p,
+.footer__contact p,
+.copyright{
+    font-family: var(--Para-font);
+    color: var(--Text-color);
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+
+
