--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* VARIABLE */ 
 :root {
-    --BG-color: #F5F0F6;
+    --BG-color: #f5f0f6;
     --Title-color: #D7B377;
     --link-color: #35A7FF;
     --Text-color: #222222;
@@ -12,7 +12,6 @@
 
 body {
     background-color: var(--BG-color);
-    /* display: flex; */
 }
 
 .line {
@@ -38,14 +37,9 @@ body {
     top: 0;
     width: 100%;
     z-index: 1;
-    background-color: var(--BG-color);
-    opacity: 0.8;
+    background-color: rgba(245, 240, 246, 0.8);
     font-family: var(--Para-font);
     font-size: 1.2em;
-}
-
-.nav__div__list li{
-    margin: 0 10px 0 10px;
 }
 
 .div__nav {
@@ -64,7 +58,7 @@ body {
 }
 
 .logo__header {
-    max-width: 60%;
+    max-width: 50%;
     min-width: 300px;
     position: absolute;
     top: 50%;
@@ -133,7 +127,9 @@ body {
     font-family: var(--Para-font);
     font-size: 1.2em;
     color: var(--Text-color);
-    padding: 25px 5% 25px 5%;
+    margin-top: 15px;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 /* SECTION ACTU */
@@ -148,7 +144,8 @@ body {
     font-family: var(--Para-font);
     color: var(--Text-color);
     font-size: 1.2em;
-    padding: 25px 5% 25px 5%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .section__actu__img{
@@ -157,8 +154,9 @@ body {
 }
 
 .section__actu__img img{
-    width: 100px;
+    width: 80px;
 }
+
 
 /* SECTION HOURLY */
 .section__hourly{
@@ -173,12 +171,15 @@ body {
     text-decoration: underline;
     font-family: var(--Para-font);
     color: var(--Text-color);
+    margin-top: 15px;
 }
 
 .section__hourly p{
     font-family: var(--Para-font);
     color: var(--Text-color);
     font-size: 1.2em;
+    padding: 0;
+    margin: 0;
 }
 
 /* SECTION MAP */
@@ -197,10 +198,17 @@ body {
     margin: 0;
 }
 
+.section__map__adress{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .section__map iframe{
     margin-top: 15px;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 250px;
 }
 
 /* FOOTER */
@@ -259,5 +267,124 @@ body {
     margin: 0;
 }
 
+/* MEDIA QUERIES */
+@media screen and (min-width: 720px) {
+    /* SECTION INDEX */
+    .title__custom {
+        font-size: 2.5em;
+    }
+    .carousel {
+        flex-direction: row;
+        gap: 20px;
+        margin-bottom: 20px;
+    }
+    .carousel img {
+        width: 200px;
+    }
 
+    /* SECTION PRESENTATION */
+    .img__valou{
+        width: 200px;
+    }
 
+    /* SECTION ACTU */
+    .section__actu__img img{
+        width: 100px;
+    }
+    .para__actu{
+        padding-left: 25%;
+        padding-right: 25%;
+    }
+
+    /* SECTION MAP */
+    .section__map iframe{
+        width: 80%;
+        height: 350px;
+    }
+
+    /* FOOTER */
+    .footer__info h4 {
+        font-size: 1.2em;
+    }
+    .footer__info p, 
+    .footer__nav p,
+    .footer__contact p{
+        font-size: 1em;
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    /* FLUX */
+    .flux {
+        width: 100%;
+        max-width: 1100px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    /* SECTION INDEX */
+    .title__custom {
+        font-size: 3em;
+    }
+    .carousel img{
+        width: 300px;
+    }
+    .para__index{
+        font-size: 1em;
+    }
+
+    /* SECTION PRESENTATION */
+    .section__presentation {
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .img__valou{
+        width: 250px;
+    }
+    .logo__maison{
+        width: 150px;
+        margin-left: 30px;
+    }
+    .para__presentation{
+        font-size: 1.4em;
+    }
+
+    /* SECTION ACTU */
+    .section__actu__img img{
+        width: 150px;
+    }
+    .para__actu{
+        font-size: 1.4em;
+        padding-left: 25%;
+        padding-right: 25%;
+    }
+
+    /* SECTION HOURLY */
+    .section__hourly h3{
+        font-size: 1.5em;
+    }
+    .section__hourly p{
+        font-size: 1.4em;
+    }
+
+    /* SECTION MAP */
+    .section__map__adress iframe{
+        width: 60%;
+        height: 450px;
+    }
+    .section__map p{
+        font-size: 1.4em;
+    }
+    .section__map__adress{
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    /* FOOTER */
+    .footer {
+        /* flex-direction: row;
+        justify-content: space-around;
+        align-items: center; */
+    }
+}
