--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,6 @@ body {
     margin: 15px;
 }
 
-.line__footer {
-    border: 1px solid var(--Text-color);
-    margin: 15px;
-    width: 80%;
-}
-
 .title__custom {
     color: var(--Title-color);
     font-family: var(--Title-font);
@@ -267,6 +261,20 @@ body {
     margin: 0;
 }
 
+.footer__description {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+}
+
+.footer__description div {
+    border-top: 1px solid var(--Text-color);
+    margin: 15px;
+
+}
+
 /* MEDIA QUERIES */
 @media screen and (min-width: 720px) {
     /* SECTION INDEX */
@@ -382,9 +390,20 @@ body {
     }
 
     /* FOOTER */
-    .footer {
-        /* flex-direction: row;
-        justify-content: space-around;
-        align-items: center; */
+    .footer__description {
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .footer__info, 
+    .footer__nav{
+        border-top: none;
+        border-right: 1px solid var(--Text-color);
+        width: 100%;
+        height: 100%;
+    }
+
+    .footer__contact{
+        border-top: none;
+        width: 100%;
+        height: 100%;
     }
 }
