--- a/css/button.css
+++ b/css/button.css
@@ -1,6 +1,6 @@
 @import 'style.css';
 
-.div__button {
+/* .div__button {
     position: relative;
     color: var(--link-color);
 }
@@ -37,4 +37,4 @@
     z-index: -1;
     transition: transform .3s ease;
     border-radius: 20px 20px 20px 20px;
-}
+} */
