--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    background-image: url('../assets/salle.jpg');
+    /* background-image: url('../assets/salle.jpg'); */
 }
 
 .logo__header {
