create request user login

--- a/css/button.css
+++ b/css/button.css
@@ -1,40 +1,23 @@
-@import 'style.css';
-
-/* .div__button {
-    position: relative;
-    color: var(--link-color);
+.custom__button {
+    background-color: var(--Button-color);
+    border: none;
+    color: var(--Text-color);
+    text-align: center;
+    text-decoration: none;
+    font-family: var(--Para-font);
+    font-size: 1.5em;
+    margin: 4px 2px;
+    cursor: pointer;
+    align-self: center;
 }
 
-.div__button a:hover {
+.custom__button:hover {
     color: var(--Title-color);
 }
 
-.button__custom {
-    border: 1px solid var(--link-color);
-    border-radius: 20px 20px 20px 20px;
-    padding: 0 20px 0 20px;
-    position: relative;
-    font-family: var(--Para-font);
-}
-
-.button__custom::before {  
-    transform: scaleX(0);
-    transform-origin: bottom right;
-}
-
-.button__custom:hover::before {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-}
-
-.button__custom::before {
-    content: " ";
-    display: block;
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    inset: 0 0 0 0;
-    background: var(--link-color);
-    z-index: -1;
-    transition: transform .3s ease;
-    border-radius: 20px 20px 20px 20px;
+/* .div__button{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 } */
