--- a/css/style.css
+++ b/css/style.css
@@ -263,42 +263,67 @@ h3::first-letter {
 /*******************************************END RESTAURANT.PHP*******************************************/
 
 /*******************************************START VENTE_EMPORTER.PHP*************************************/
-.section__take-away {
+.section__take-away, 
+.section__buffet, 
+.section__buffet__info, 
+.section__take-away__info {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.section__take-away h2 {
+.section__take-away h2, 
+.section__buffet h2 {
     align-self: center;
 }
 
-.section__take-away__div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.section__take-away__div p, 
+.section__buffet__div p,
+.section__reservation__info p {
+    margin: 0;
 }
 
-.section__take-away__info, 
 .take-aways, 
-.take-away__item {
+.section__buffet__div,
+.section__take-away__div,
+.section__reservation,
+.section__reservation__info {
     display: flex;
     flex-direction: column;
     align-items: center;
     color: var(--Text-color);
     font-family: var(--Para-font);
-}
-
-.section__take-away__info img {
-    width: 150px;
-    margin: 15px 0;
-}
-
-.take-away__item p{
-    margin: 0;
     font-size: 1em;
+    margin: 20px 0;
 }
+
+.section__take-away__images,
+.section__buffet__info__images {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+}
+
+.section__take-away__images img, 
+.section__buffet__info__images img {
+    width: 150px;
+    height: 200px;
+    border-radius: var(--border-radius-custom);
+    box-shadow: var(--box-shadow-custom);
+}
+
+.section__buffet__info button,
+.section__take-away__info button {
+    color: var(--link-color);
+}
+
+.form__reservation {
+    background-color: none;
+}
+
 
 
 /*******************************************END VENTE_EMPORTER.PHP***************************************/
@@ -375,6 +400,7 @@ h3::first-letter {
 
 /* MEDIA QUERIES */
 @media screen and (min-width: 720px) {
+    /****************************************START INDEX.PHP************************************/
     /* SECTION INDEX */
     .title__custom {
         font-size: 2.5em;
@@ -387,12 +413,12 @@ h3::first-letter {
     .carousel img {
         width: 200px;
     }
-
+    
     /* SECTION PRESENTATION */
     .img__valou{
         width: 200px;
     }
-
+    
     /* SECTION ACTU */
     .section__actu__img img{
         width: 100px;
@@ -401,12 +427,21 @@ h3::first-letter {
         padding-left: 25%;
         padding-right: 25%;
     }
-
+    
     /* SECTION MAP */
     .section__map iframe{
         width: 80%;
         height: 350px;
     }
+    /************************************************END INDEX.PHP******************************/
+
+    /************************************START VENTE_EMPORTER.PHP*******************************/
+    .section__take-away__images,
+    .section__buffet__info__images{
+        flex-direction: row;
+    }
+
+    /************************************END VENTE_EMPORTER.PHP*******************************/
 
     /* FOOTER */
     .footer__info h4 {
@@ -428,7 +463,7 @@ h3::first-letter {
         margin-right: auto;
     }
 
-    /***************************************************START INDEX.PHP***************************************/
+    /*******************************************START INDEX.PHP***************************************/
     /* SECTION INDEX */
     .title__custom {
         font-size: 3em;
@@ -489,15 +524,24 @@ h3::first-letter {
         justify-content: space-around;
     }
 
-    /***************************************************END INDEX.PHP*******************************************/
+    /*******************************************END INDEX.PHP**************************************/
 
-    /***************************************************START VENTE_EMPORTER.PHP********************************/
-    .section__take-away__info {
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
+    /*******************************************START VENTE_EMPORTER.PHP********************************/
+    .section__take-away__info, 
+    .take-aways, 
+    .section__buffet__div,
+    .section__take-away__div,
+    .section__reservation,
+    .section__reservation__info {
+        font-size: 1.2em;
     }
-    /***************************************************END VENTE_EMPORTER.PHP**********************************/
+    
+    .section__take-away__images img, 
+    .section__buffet__info__images img {
+        width: 250px;
+        height: 300px;
+    }
+    /*******************************************END VENTE_EMPORTER.PHP**********************************/
     /* FOOTER */
     .footer__description {
         grid-template-columns: repeat(3, 1fr);
